--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="4dp"
-    android:background="@drawable/background_message">
+    android:background="@drawable/background_message"
+    android:id="@+id/contact_field">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -36,35 +37,13 @@
         android:background="@color/secondary"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@id/contact_last_message"
+        app:layout_constraintBottom_toTopOf="@id/contact_status"
         app:layout_constraintStart_toEndOf="@+id/materialCardView"
         app:layout_constraintTop_toTopOf="@+id/materialCardView"
         tools:text="Nome Sobrenome" />
 
     <TextView
-        android:id="@+id/last_message_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@color/secondary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/contact_name"
-        tools:text="06:39" />
-
-    <ImageView
-        android:id="@+id/message_icon"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:background="@color/secondary"
-        android:contentDescription="@string/message_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-        app:layout_constraintStart_toStartOf="@+id/contact_name"
-        app:layout_constraintTop_toTopOf="@id/contact_last_message"
-        app:tint="@color/grey"
-        tools:src="@drawable/ic_sended" />
-
-    <TextView
-        android:id="@+id/contact_last_message"
+        android:id="@+id/contact_status"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginHorizontal="2dp"
@@ -77,7 +56,7 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/message_icon"
+        app:layout_constraintStart_toStartOf="@id/contact_name"
         app:layout_constraintTop_toBottomOf="@id/contact_name"
         tools:text="@tools:sample/lorem/random" />
 
