--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="4dp"
-    android:background="@drawable/background_message">
+    android:background="@drawable/background_message"
+    android:id="@+id/message_field">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -23,8 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@string/contact_photo"
-            android:scaleType="fitXY"
-            app:tint="@color/secondary" />
+            android:scaleType="centerCrop" />
 
     </com.google.android.material.card.MaterialCardView>
 
@@ -57,9 +57,10 @@
         android:layout_height="12dp"
         android:background="@color/secondary"
         android:contentDescription="@string/message_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
+        app:layout_constraintBottom_toBottomOf="@+id/contact_last_message"
         app:layout_constraintStart_toStartOf="@+id/contact_name"
         app:layout_constraintTop_toTopOf="@id/contact_last_message"
+        app:layout_constraintVertical_bias="0.65"
         app:tint="@color/grey"
         tools:src="@drawable/ic_sended" />
 
